# astryx-ai-microservice-v2

./: .env.example  .gitignore  README.md  insightgood.py  main.py  pyproject.toml  requirements.txt  routes.txt  test.py  test_news_api.py
.github/workflows/: main_astryx-ai-microservice-v2.yml
app/: config.py  db.py  grpc_server.py  main.py  migrations_helper.py  models.py  schemas.py  vectorstore.py
app/agent_tools/: chart_emit.py  chart_formats.py  exa.py  financial_extraction.py  formatter.py  helper_tools.py  price_movement.py  registry.py  xbrl_analyzer.py
app/agents/: README_SPLIT.md
app/agents/super/: casual.py  (+12 more)
app/db/: companies.py  supabase.py
app/features/: __init__.py
app/graph/: __init__.py  checkpoints.py  runner.py  state.py  utils.py
app/interfaces/: __init__.py
app/proto/: message.proto  message_pb2.py  message_pb2_grpc.py  test.proto  test_pb2.py  test_pb2_grpc.py
app/routes/: agent.py  candles.py  chat.py  health.py  ingest_companies.py  ingest_news.py  ingest_stock.py  insight.py  news.py  price_movement.py  rag.py  stock_screen.py  super_agent.py
app/scrapper/: companies_scraper.py  sanitize.py  scrape_news.py  scrape_stock.py  vector_store.py
app/services/: agent.py  azure_openai.py  config.py  ingest_companies.py  insight_service.py  memory_store.py  news_service.py  rag.py  report.py  super_agent.py  super_agent_wrapped.py  upstox.py  vector_store.py
app/subgraphs/: chart_viz.py  deep_research.py  financial_analysis.py
app/tools/: config.py  exa.py  memory_store.py  vector_store.py
app/utils/: model.py  stream_utils.py
(+38 files in other folders)
