[project]
name = "ai-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.5.2",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "yfinance>=0.2.65",
    "psycopg[binary]>=3.2.9",
    "supabase>=2.18.1",
    "langchain-community>=0.3.27",
]
